<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.dkim127.shippingcalculator.MainActivity"
    android:id="@+id/shippingRelativeLayout"
    android:background="@drawable/box">

    <LinearLayout
        android:id="@+id/inputLayout"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/inputQueryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/input_query"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/userInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_unit"
            android:id="@+id/inputUnitTextView"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/calculationDisplayLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayout"
        android:layout_marginTop="40dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:columnCount="2"
        android:rowCount="3"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/base_cost"
            android:id="@+id/baseCostLabelTextView"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="left"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/added_cost"
            android:id="@+id/addedCostLabelTextView"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_gravity="left"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total_shipping_cost"
            android:id="@+id/totalShippingCostLabelTextView"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="left"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:id="@+id/baseCostTextView"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="right"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:id="@+id/addedCostTextView"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="right"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"
            android:id="@+id/totalShippingCostTextView"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="right"
            />



    </GridLayout>

</RelativeLayout>
